dates/crashes/e5b39fb245d11a3436a26b5bbd2c7c94f99f1f7d/report20
EXT4-fs error (device loop2) in ext4_do_update_inode:5151: error 27
EXT4-fs error (device loop2): __ext4_ext_dirty:169: inode #2: comm syz.2.85: mark_inode_dirty error
==================================================================
BUG: KASAN: use-after-free in ext4_rename_dir_prepare+0x3b7/0x450 fs/ext4/namei.c:3546
Read of size 4 at addr ffff88801daf7000 by task syz.2.85/2484

CPU: 1 PID: 2484 Comm: syz.2.85 Not tainted 5.10.0 #1
Hardware name: QEMU Ubuntu 24.04 PC (i440FX + PIIX, 1996), BIOS 1.16.3-debian-1.16.3-2 04/01/2014
Call Trace:
 __dump_stack lib/dump_stack.c:77 [inline]
 dump_stack+0x107/0x163 lib/dump_stack.c:118
 print_address_description.constprop.0+0x1c/0x210 mm/kasan/report.c:385
 __kasan_report mm/kasan/report.c:545 [inline]
 kasan_report.cold+0x37/0x7c mm/kasan/report.c:562
 ext4_rename_dir_prepare+0x3b7/0x450 fs/ext4/namei.c:3546
 ext4_rename+0x15b1/0x2640 fs/ext4/namei.c:3816
 ext4_rename2+0x1af/0x240 fs/ext4/namei.c:4109
 vfs_rename+0xf1b/0x1960 fs/namei.c:4310
 do_renameat2+0x732/0xb80 fs/namei.c:4457
 __do_sys_renameat fs/namei.c:4498 [inline]
 __se_sys_renameat fs/namei.c:4495 [inline]
 __x64_sys_renameat+0x96/0x100 fs/namei.c:4495
 do_syscall_64+0x33/0x40 arch/x86/entry/common.c:46
 entry_SYSCALL_64_after_hwframe+0x44/0xa9
RIP: 0033:0x7fc012125ef9
Code: ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 c7 c1 a8 ff ff ff f7 d8 64 89 01 48
RSP: 002b:00007fc010d7e038 EFLAGS: 00000246 ORIG_RAX: 0000000000000108
RAX: ffffffffffffffda RBX: 00007fc0122de058 RCX: 00007fc012125ef9
RDX: 000000000000000c RSI: 0000000020000240 RDI: 000000000000000c
RBP: 00007fc012198b76 R08: 0000000000000000 R09: 0000000000000000
R10: 00000000200001c0 R11: 0000000000000246 R12: 0000000000000000
R13: 0000000000000000 R14: 00007fc0122de058 R15: 00007fff5821df48

The buggy address belongs to the page:
page:000000002b4bf378 refcount:0 mapcount:0 mapping:0000000000000000 index:0x1 pfn:0x1daf7
flags: 0x100000000000000()
raw: 0100000000000000 ffffea000079fa08 ffffea000079f988 0000000000000000
raw: 0000000000000001 0000000000000000 00000000ffffffff 0000000000000000
page dumped because: kasan: bad access detected

Memory state around the buggy address:
 ffff88801daf6f00: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 ffff88801daf6f80: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
>ffff88801daf7000: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
                   ^
 ffff88801daf7080: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
 ffff88801daf7100: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
==================================================================
syz.2.85 (2467) used greatest stack depth: 21848 bytes left
